# rema_plusplus

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  cloc.sh  flash_CIAA.sh  telemetry.proto  toolchain.cmake
Debug/: makefile  rtu_plusplus.axf  rtu_plusplus.map  rtu_plusplus_Debug.ld  rtu_plusplus_Debug_library.ld  rtu_plusplus_Debug_memory.ld  sources.mk
Debug/freertos/src/: croutine.d  event_groups.d  event_groups.su  heap_4.d  heap_4.su  list.d  port.d  port.su  queue.d  queue.su  stream_buffer.d  stream_buffer.su  subdir.mk  tasks.d  tasks.su  timers.d  timers.su
Debug/lwip/src/api/: api_lib.d  api_msg.d  err.d  netbuf.d  netdb.d  netifapi.d  sockets.d  sockets.su  subdir.mk  tcpip.d  tcpip.su
Debug/lwip/src/arch/: lpc18xx_43xx_emac.d  lpc18xx_43xx_emac.su  lpc_debug.d  subdir.mk  sys_arch_freertos.d  sys_arch_freertos.su
Debug/lwip/src/core/: def.d  dhcp.d  dns.d  init.d  mem.d  mem.su  memp.d  netif.d  pbuf.d  raw.d  stats.d  subdir.mk  sys.d  tcp.d  tcp_in.d  tcp_in.su  tcp_out.d  timers.d  timers.su  udp.d
Debug/lwip/src/core/ipv4/: autoip.d  icmp.d  igmp.d  inet.d  inet_chksum.d  ip.d  ip.su  ip_addr.d  ip_frag.d  subdir.mk
Debug/lwip/src/netif/: etharp.d  ethernetif.d  subdir.mk
Debug/nfc/src/: ad2s1210.d  ad2s1210.su  arm.d  arm.su  cr_cpp_config.d  cr_startup_lpc43xx.d  cr_startup_lpc43xx.su  debug.d  debug.su  dout.d  dout.su  ds-18b20.d  ds-18b20.su  eeprom.d  eeprom.su  json_wp.d  json_wp.su  lift.d  lift.su  lwip_init.d  lwip_init.su  main.d  main.su  mem_check.d  mem_check.su  mot_pap.d  mot_pap.su  net_commands.d  net_commands.su  one-wire.d  one-wire.su  parson.d  parson.su  poncho_rdc.d  poncho_rdc.su  relay.d  relay.su  settings.d  settings.su  spi.d  (+13 more)
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Makefile  StandardSettings.cmake  StaticAnalyzers.cmake  armgcc.cmake
device/: lpc4337.ld  lpc4337_library.ld  lpc4337_memory.ld
freertos/src/: heap_6.c
inc/: FreeRTOSConfig.h  arduinojson_cust_alloc.h  bresenham.h  crypto.h  custom_alloc.h  debug.h  ds18b20.hpp  eeprom.h  encoders_pico.h  gpio.h  gpio_templ.h  ip_fns.h  joystick.h  json_wp.h  kp.h  lpc_18xx43xx_emac_config.h  lwip_init.h  lwipopts.h  mem_check.h  misc.h  mot_pap.h  net_commands.h  one-wire_bitbang_master.hpp  parson.h  rema.h  settings.h  spi.h  tcp_server.h  tcp_server_comm.h  tcp_server_command.h  tcp_server_logs.h  tcp_server_telemetry.h  telemetry.pb.h  temperature_ds18b20.h  tmr.h  wait.h  websocket.h  xy_axes.h  z_axis.h
lwip/inc/arch/: cc.h  sys_arch.h
lwip/inc/lwip/: opt.h
lwip/src/api/: tcpip.c
lwip/src/arch/: lpc18xx_43xx_emac.c
newlib/: stubs.c  syscalls.c
nfc/inc/: ad2s1210.h  bresenham.h  debug.h  dout.h  ds18b20.hpp  eeprom.h  encoders.h  gpio.h  gpio_templ.h  hard_limits.h  json_wp.h  kp.h  lift.h  mem_check.h  misc.h  mot_pap.h  net_commands.h  one-wire.h  one-wire_bitbang_master.hpp  one-wire_config.h  parson.h  probe.h  relay.h  rema.h  settings.h  spi.h  tcp_server.h  temperature.h  temperature_ds18b20.h  tmr.h  wait.h  x_axis.h  x_zs.h  xy_axes.h  y_axis.h  z_axis.h
nfc/src/: ad2s1210.cpp  arm.cpp  bresenham.cpp  cr_cpp_config.cpp  cr_startup_lpc43xx.cpp  crp.c  debug.cpp  dout.cpp  ds-18b20.cpp  eeprom.cpp  encoders.cpp  gpio.cpp  hard_limits.cpp  json_wp.cpp  kp.cpp  lift.cpp  lwip_init.cpp  main.cpp  mem_check.cpp  mot_pap.cpp  net_commands.cpp  one-wire.cpp  one-wire_bitbang_master.cpp  parson.cpp  pole.cpp  poncho_rdc.cpp  probe.cpp  relay.cpp  rema.cpp  settings.cpp  spi.cpp  tcp_server.cpp  tcp_server_comm.cpp  tcp_server_telemetry.cpp  temperature.cpp  temperature_ds18b20.cpp  tmr.cpp  wait.cpp  x_axis.cpp  x_zs.cpp  (+3 more)
openOCD/: lpc4337.cfg
src/: bresenham.cpp  cr_cpp_config.cpp  cr_startup_lpc43xx.cpp  crypto.cpp  debug.cpp  eeprom.cpp  encoders.cpp  encoders_pico.cpp  gpio.cpp  joystick.cpp  json_wp.cpp  kp.cpp  lwip_init.cpp  main.cpp  mem_check.cpp  mot_pap.cpp  net_commands.cpp  parson.cpp  rema.cpp  settings.cpp  spi.cpp  sysinit.c  tcp_server.cpp  tcp_server_comm.cpp  tcp_server_command.cpp  tcp_server_telemetry.cpp  telemetry.pb.cpp  temperature_ds18b20.cpp  tmr.cpp  wait.cpp  websocket.cpp  xy_axes.cpp  z_axis.cpp
